# HIP-HELLO-WORLD

./: Crusher.runtime_environment.sh  README.md
configurations/: Crusher.sh  hiphelloworld_core_configurations.sh
src/: CMakeLists.txt
src/cmake_macros_and_functions/: hiphelloworld_boost.cmake
src/header_files/: HIP-Hello-World.h
src/hello_world_main/: CMakeLists.txt
src/hello_world_main/header_files/: HIP-Hello-World.h
src/hello_world_main/implementation_files/: HIP-Hello-World.cpp
src/implementation_files/: HIP-Hello-World.cpp
src/say_hello_cpu/: CMakeLists.txt
src/say_hello_cpu/header_files/: say_hello_cpu.h
src/say_hello_cpu/implementation_files/: say_hello_cpu.cpp
src/say_hello_gpu/: CMakeLists.txt
src/say_hello_gpu/header_files/: say_hello_gpu.h
src/say_hello_gpu/implementation_files/: say_hello_gpu.cpp
